[gd_scene load_steps=2 format=3 uid="uid://dql47rn8v6bpg"]

[ext_resource type="Script" path="res://scripts/wall_paint_tool.gd" id="1_wall_paint_tool"]

[node name="WallPaintTool" type="VBoxContainer"]
script = ExtResource("1_wall_paint_tool")
theme_override_constants/separation = 8

[node name="ToolLabel" type="Label" parent="."]
layout_mode = 2
text = "Wall Paint Tool"

[node name="ModeSection" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 4

[node name="AddButton" type="Button" parent="ModeSection"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Add Wall"

[node name="RemoveButton" type="Button" parent="ModeSection"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Remove Wall"

[node name="CancelButton" type="Button" parent="."]
layout_mode = 2
text = "Cancel"

[node name="StatusLabel" type="Label" parent="."]
layout_mode = 2
horizontal_alignment = 1
autowrap_mode = 2
